# cctools

./: .azure.yml  .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt
cmake/cctools/: CMakeLists.txt  Prepare.cmake
cmake/cctools/ccport/: CMakeLists.txt  ccport.c
cmake/cctools/ccport/include/ccport/: ar.h  config.h  crt_externs.h  errno.h  fcntl.h  string.h  tzfile.h
cmake/cctools/ccport/include/ccport/mach-o/: nlist.h
cmake/cctools/ccport/include/ccport/mach/arm/: thread_status.h
cmake/cctools/ccport/include/ccport/malloc/: malloc.h
cmake/cctools/ccport/include/ccport/objc/: objc-runtime.h
cmake/cctools/ccport/include/ccport/servers/: bootstrap.h
cmake/cctools/ccport/include/ccport/stuff/: bytesex.h  macosx_deployment_target.h
cmake/cctools/ccport/include/ccport/uuid/: uuid.h
cmake/cctools/ccport/include/kernel/: libc.h
cmake/cctools/ccport/include/kernel/libkern/: OSByteOrder.h
cmake/cctools/ccport/include/kernel/mach/: boolean.h  error.h  host_info.h  kern_return.h  mach.h  mach_error.h  mach_host.h  mach_init.h  mach_interface.h  mach_port.h  mach_types.h  mach_vm.h  message.h  port.h  thread.h  vm_attributes.h  vm_map.h  vm_page_size.h  vm_prot.h  vm_types.h
cmake/cctools/ccport/include/kernel/mach/arm/: _structs.h
cmake/cctools/ccport/include/kernel/mach/i386/: _structs.h
cmake/cctools/ccport/include/kernel/mach/machine/: boolean.h
cmake/cctools/ccport/include/kernel/mach/ppc/: thread_status.h
cmake/cctools/ccport/include/kernel/sys/: _types.h  attr.h  sysctl.h
cmake/cctools/demangle/: CMakeLists.txt  demangle.c
cmake/ld64/: CMakeLists.txt
cmake/libobjc2/: CMakeLists.txt
cmake/libressl/: CMakeLists.txt
cmake/libxml2/: CMakeLists.txt
cmake/llvm/: CMakeLists.txt
cmake/llvm/ld64/: CMakeLists.txt  ldport.cpp
cmake/llvm/ld64/include/: Block.h  compile_stubs.h  configure.h  fcntl.h  libunwind.h  string.h  unistd.h
cmake/llvm/ld64/include/libkern/: OSByteOrder.h
cmake/llvm/ld64/include/tapi/: tapi.h
cmake/llvm/tapi/: CMakeLists.txt
cmake/llvm/tapi/include/clang/Basic/: VirtualFileSystem.h
cmake/modules/: CcChecks.cmake  CcDetectTarget.cmake  CcLocateSources.cmake
cmake/uuid/: CMakeLists.txt
cmake/xar/: CMakeLists.txt
cmake/zlib/: CMakeLists.txt
ld64/src/ld/: Options.cpp  Options.h  OutputFile.cpp  ld.cpp
ld64/src/ld/parsers/: macho_relocatable_file.cpp
libtapi/: CMakeLists.txt
tapi/: CMakeLists.txt
tapi/lib/Core/: APIPrinter.cpp  FileManager.cpp  MachODylibReader.cpp  Path.cpp
tapi/port/tapi/Core/: ExtendedInterfaceFile.h  FileSystem.h  InterfaceFile.h  LLVM.h  Registry.h  STLExtras.h
tapi/tools/libtapi/: libtapi.cpp
